<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/feedLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FeedFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/postList"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/card_post" />

        <!--    сообщение об ошибке-->
        <androidx.constraintlayout.widget.Group
            android:id="@+id/errorGroup"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:constraint_referenced_ids="errorLoad, retryFeedButton, errorBackground"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/errorBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#E1E3E5"
            android:contentDescription="@string/dud"
            app:layout_constraintBottom_toBottomOf="@id/retryFeedButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/errorLoad" />

        <TextView
            android:id="@+id/errorLoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_load"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/retryFeedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/errorLoad" />
        <!--    сообщение об ошибке-->

        <!--    загрузка списка постов-->
        <androidx.constraintlayout.widget.Group
            android:id="@+id/loadPostsGroup"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:constraint_referenced_ids="loadPostsText, loadPostsProgressBar"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/loadPostsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiving_posts"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/loadPostsProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/loadPostsText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <!--    загрузка списка постов-->

        <TextView
            android:id="@+id/emptyFeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_post_list"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addPostButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_size_ic24"
            android:contentDescription="@string/description_send_post"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>